<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_beranda" />
        <item
            android:id="@+id/nav_ftth"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/overview_jaringan_ftth" />
        <item
            android:id="@+id/nav_feeder"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/segment_feeder" />
        <item
            android:id="@+id/nav_distribusi"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/segment_distribusi" />
        <item
            android:id="@+id/nav_drop"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_drop" />
        <item
            android:id="@+id/nav_simulasi"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_simulasi" />
    </group>

</menu>
