<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_overview_ftth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/bg_button_menu_utama"
                android:gravity="center"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/overview_jaringan_ftth"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_segment_feeder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/bg_button_menu_utama"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/segment_feeder"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_segment_distribusi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/bg_button_menu_utama"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/segment_distribusi"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_segment_drop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/bg_button_menu_utama"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/segment_drop"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_sim_power_link"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/bg_button_menu_utama"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_vertical"
                    android:text="@string/simulasi_powerlink_budget"
                    android:textColor="@color/putih"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>